# mrmat-python-api-flask

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  build-requirements.txt  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml
migrations/: env.py
migrations/versions/: 1bea80b612cc_initial.py  2c4268119c7e_initial.py
mrmat_python_api_flask/: __init__.py  client.py  cui.py
mrmat_python_api_flask/apis/: __init__.py
mrmat_python_api_flask/apis/greeting/v1/: api.py  model.py
mrmat_python_api_flask/apis/greeting/v2/: api.py
mrmat_python_api_flask/apis/greeting/v3/: api.py  model.py
mrmat_python_api_flask/apis/healthz/: __init__.py  api.py
mrmat_python_api_flask/apis/resource/v1/: __init__.py  api.py  model.py
src/ci/: __init__.py
src/mrmat_python_api_flask/: __init__.py  client.py  config.py  db.py
src/mrmat_python_api_flask/apis/: __init__.py
src/mrmat_python_api_flask/apis/greeting/v1/: __init__.py  api.py  model.py
src/mrmat_python_api_flask/apis/greeting/v2/: __init__.py  api.py  model.py
src/mrmat_python_api_flask/apis/greeting/v3/: __init__.py  api.py  model.py
src/mrmat_python_api_flask/apis/healthz/: api.py  model.py
src/mrmat_python_api_flask/apis/platform/v1/: __init__.py  api.py  model.py
src/mrmat_python_api_flask/apis/resource/v1/: api.py
src/python/mrmat_python_api_flask/: __init__.py  client.py  cui.py
src/python/mrmat_python_api_flask/apis/greeting/v2/: api.py  model.py
src/python/mrmat_python_api_flask/apis/greeting/v3/: api.py
src/python/mrmat_python_api_flask/apis/healthz/: api.py
src/python/mrmat_python_api_flask/apis/resource/v1/: api.py
src/python/mrmat_python_api_flask/migrations/: env.py
tests/: conftest.py  resource_api_client.py  test_api_greeting_v1.py  test_api_greeting_v2.py  test_api_greeting_v3.py  test_api_version.py  test_greeting.py  test_greeting_v1.py  test_greeting_v2.py  test_greeting_v3.py  test_healthz.py  test_platform.py  test_resource_v1.py  test_ted.py
tests/mocks/: __init__.py  mock_idp.py
var/: client-localhost.http
var/container/: Dockerfile
var/docker/: Dockerfile
var/helm/: Chart.yaml  values.yaml
var/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
