[metadata]
name = mrmat-python-api-flask
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-api-flask
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    flask~=2.0.2
    Flask-SQLAlchemy~=2.5.1
    Flask-Migrate~=3.1.0
    Flask-Marshmallow~=0.14.0
    marshmallow-sqlalchemy~=0.26.0
    psycopg2-binary
    Flask-OIDC~=1.4.0
    requests_oauthlib~=1.3.0
    rich~=10.14.0

[options.entry_points]
console_scripts =
    mrmat-python-api-flask = mrmat_python_api_flask.cui:main
    mrmat-python-api-flask-client = mrmat_python_api_flask.client:main

[options.packages.find]
exclude =
    ci
