[metadata]
name = mrmat-python-api-flask
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-api-flask
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src/python
packages = find:
install_requires =
    rich~=12.5.1
    Flask~=2.1.3
    Flask-SQLAlchemy~=2.5.1
    Flask-Migrate~=3.1.0
    flask-smorest~=0.38.1
    Flask-Marshmallow~=0.14.0
    marshmallow-sqlalchemy~=0.27.0
    psycopg2-binary~=2.9.3
    Flask-OIDC~=1.4.0
    requests_oauthlib~=1.3.1
    itsdangerous<=2.0.1

[options.entry_points]
console_scripts =
    mrmat-python-api-flask = mrmat_python_api_flask.cui:main
    mrmat-python-api-flask-client = mrmat_python_api_flask.client:main

[options.packages.find]
where=src/python
exclude =
    ci
